# AutoInstallApk

./: Cargo.toml
src/: main.rs
